3/8/19
    - Added in KeyBind system
    - Changed profiler windows to be one window for all of them
    - Other minor fixes

3/6/19
    - Added in map icons for village idol, mineholes, and ladders. Minehole can only link to ladders and vice versa.
    - Added in Option under Gameplay to halve the size of minimap icons. Also option for hiding icons all together, no
    longer 'm' key
    - Changed map merging to localized area to avoid bad merges when two different maps exist in MCache that shouldn't
    be connected.
    - Fixed crash with queued moves and going to other maps
    - Reverted change to try to stop icons blipping when minimap grids update. Needs a better solution

3/5/19
    - :lo will do the logout animation now when in game
    - bumped SlothMarkers to v1
    - Added LinkedMarkers defaulting at v2. You can use these markers to link different maps together. To link them
    to another marker you need to go into the Markers List and select the marker it links to. Once linked you can
    right click it on the map to then go to that marker. Caves can link to other caves only.

3/4/19
    - Options for having tracking/criminal acts toggled on when logging in under Gameplay settings
    - Switch toggle hitboxes to Ctrl+H and toggle tooltips to Ctrl+R
    - Moved the hafen cache files from %APPDATA% to <hafen-jar-directory>/data/cache/
    1. Backup your %APPDATA%/Haven and Hearth folder up
    2. Make <hafen-jar-directory>/data/cache/ folder
    3. Copy over all the %APPDATA%/Haven and Hearth/data/* files to <hafen-jar-directory>/data/cache/
    4. You can delete %APPDATA%/Haven and Hearth/ but keep your backup just in case.
    - Changed keybinds around.
        Ctrl+P : pause
        Ctrl+G: grid
        Ctrl+Q: Tooltips

3/3/19
    - Misc fix with Avatars
    - Minimap icons should all scale with zoom level
    - Loftar map debug messages no longer print to system chat..
    - Bug with pointers